# CSD2

./: README.md  hallo
Blok_2C/: CMakeLists.txt
Blok_2C/1_CircBuffer/: CMakeLists.txt  circBuffer.cpp  circBuffer.h  delay.cpp  delay.h  effect.cpp  effect.h  main.cpp  sine.cpp  sine.h  tremolo.cpp  tremolo.h
Blok_2C/DSP_Passes/: CMakeLists.txt  graph.py  main.cpp  writeToFile.cpp  writeToFile.h
Cpp_basics/Opdracht1A_Classes/: Classes.h  ClassesExe  Nexus.cpp
Cpp_basics/Opdracht1B_MakeFile/: Makefile
Cpp_basics/Opdracht1B_MakeFile/include/: classes.h
Cpp_basics/Opdracht1B_MakeFile/src/: classes.cpp  main.cpp
Cpp_basics/Opdracht1C_InheritenceSine/: build.sh
Cpp_basics/Opdracht1C_InheritenceSine/include/: oscillator.h  sine.h  square.h
Cpp_basics/Opdracht1C_InheritenceSine/src/: Makefile  buildexe  graph.py  main.cpp  oscillator.cpp  output.csv  saw.cpp  sine.cpp  square.cpp
Cpp_basics/Opdracht1_Classes/: Classes.cpp  Classes.h
Python_basics/: 160bpm-beat.midi  log.csv  playsound.py
cpp_basics/Opdracht1B_MakeFile/: build.sh
cpp_basics/Opdracht1B_MakeFile/src/: classes.cpp  main.cpp
cpp_basics/Opdracht1C_InheritenceSine/: auto.sh  build.sh
cpp_basics/Opdracht1C_InheritenceSine/include/: oscillator.h  saw.h  (+3 more)
funthon/hello_world/: Cargo.toml
python_basics/: .help.swp  .hep.swp  .soundtest.py.swp  .version.swp  110bpm-beat.midi  1_helloworld.py  2_beatback.py  3_newback.py  4_events.py  5_eindopdracht.py  blmlog.csv  drumandbass.txt  helloworld.py  playback.py  playsound.py  soundtest.py
python_basics/beats/: drumandbass.txt  dubstep.txt
(+8 files in other folders)
